--- a/public/admin.html
+++ b/public/admin.html
@@ -75,35 +75,35 @@
 	</div>
 		<!-- Sandwich Menu -->
 		<div class="tabs-panel is-active" data-menu-items="sandwiches" id="menuSandwiches">
-			<div class="flex-container " id="sandwichItem">
+			<div class="flex-container" id="sandwichItem">
 		  <!-- Sandwich Items Added Jquery-->
 			</div>
 		</div>
 
 		<!-- Burgers Menu -->
 		<div class="tabs-panel" data-menu-items="burgers" id="menuBurgers">
-			<div class="flex-container ">
+			<div class="flex-container" id="burgerItem">
   		<!-- Burgers Items Added Jquery-->
 			</div>
 		</div>
 
 		<!-- Salads Menu -->
 		<div class="tabs-panel" data-menu-items="salads" id="menuSalads">
-			<div class="flex-container ">
+			<div class="flex-container" id="saladItem">
     	<!-- Salads Items Added Jquery-->
 			</div>
 		</div>
 
 		<!-- Ice Cream Menu -->
 		<div class="tabs-panel" data-menu-items="icecream" id="menuSoftServe">
-			<div class="flex-container ">
+			<div class="flex-container" id="icecreamItem">
   		<!-- Ice Cream Items Added Jquery-->
 			</div>
 		</div>
 
 		<!-- Drinks Menu -->
 		<div class="tabs-panel" data-menu_items="drinks" id="menuDrinks">
-			<div class="flex-container ">
+			<div class="flex-container" id="drinkItem">
   		<!-- Drink Items Added Jquery-->
 			</div>
 		</div>
