--- a/public/main.html
+++ b/public/main.html
@@ -69,277 +69,33 @@
 
 	<div class="tabs-content menuItem-container" data-tabs-content="menu-tabs">
 
-		<!-- Appetizers Menu -->
-		<div class="tabs-panel is-active" data-menu-items="appetizers" id="menuAppetizers">
-
-			<div class="flex-container ">
-
-				<div class="card" style="width: 300px;">
-					<div class="header cell-header card-section">
-						<h4>House Fries</h4>
-						<p>oh yum a tasty treat. Get it while its hot! </p>
-						<div class="card-divider flex-container footer">
-							<p class="align-left">Price: $$
-								<button type="button" class="button align-right" data-item-id="1">Add Item</button>
-							</p>
-						</div>
+				<!-- Sandwich Menu -->
+				<div class="tabs-panel is-active" data-menu-items="sandwiches" id="menuSandwiches">
+					<div class="flex-container" id="sandwichItem">
+						<!-- Sandwich Items Added Jquery-->
 					</div>
 				</div>
-
-				<div class=" card" style="width: 300px;">
-					<div class="header cell-header card-section">
-						<h4>Cheesey Fries</h4>
-						<p>More cheese! I said more cheeeeeeeeeeese!</p>
-						<div class="card-divider flex-container footer">
-							<p class="align-left">Price: $$
-								<button type="button" class="button align-right" data-item-id="2">Add Item</button>
-							</p>
-						</div>
+		
+				<!-- Burgers Menu -->
+				<div class="tabs-panel" data-menu-items="burgers" id="menuBurgers">
+					<div class="flex-container" id="burgerItem">
+						<!-- Burgers Items Added Jquery-->
 					</div>
 				</div>
-
-				<div class="card" style="width: 300px;">
-					<div class="header cell-header card-section">
-						<h4>Buffalo Wings</h4>
-						<p>Buffalos don't have wings</p>
-						<div class="card-divider flex-container footer">
-							<p class="align-left">Price: $$
-								<button type="button" class="button align-right" data-item-id="3">Add Item</button>
-							</p>
-						</div>
+		
+				<!-- Salads Menu -->
+				<div class="tabs-panel" data-menu-items="salads" id="menuSalads">
+					<div class="flex-container" id="saladItem">
+						<!-- Salads Items Added Jquery-->
 					</div>
 				</div>
-
-				<div class="card" style="width: 300px;">
-					<div class="header cell-header card-section">
-						<h4>Chicken Nuggies</h4>
-						<p>Is it chicken or something else...</p>
-						<div class="card-divider flex-container footer">
-							<p class="align-left">Price: $$
-								<button type="button" class="button align-right" data-item-id="4">Add Item</button>
-							</p>
-						</div>
+		
+				<!-- Drinks Menu -->
+				<div class="tabs-panel" data-menu_items="drinks" id="menuDrinks">
+					<div class="flex-container" id="drinkItem">
+						<!-- Drink Items Added Jquery-->
 					</div>
 				</div>
-			</div>
-		</div>
-
-		<!-- Burgers Menu -->
-		<div class="tabs-panel" data-menu-items="burgers" id="menuBurgers">
-
-			<div class="flex-container ">
-
-				<div class="card" style="width: 300px;">
-					<div class="header cell-header card-section">
-						<h4>Bruschetta Bout It Burger</h4>
-						<p></p>
-						<div class="card-divider flex-container footer">
-							<p class="align-left">Price: $$
-								<button type="button" class="button align-right" data-item-id="1">Add Item</button>
-							</p>
-						</div>
-					</div>
-				</div>
-
-				<div class="card" style="width: 300px;">
-					<div class="header cell-header card-section">
-						<h4>If Looks Could Kale Burger</h4>
-						<p></p>
-						<div class="card-divider flex-container footer">
-							<p class="align-left">Price: $$
-								<button type="button" class="button align-right" data-item-id="2">Add Item</button>
-							</p>
-						</div>
-					</div>
-				</div>
-
-				<div class="card" style="width: 300px;">
-					<div class="header cell-header card-section">
-						<h4>Summer Thyme Burger</h4>
-						<p></p>
-						<div class="card-divider flex-container footer">
-							<p class="align-left">Price: $$
-								<button type="button" class="button align-right" data-item-id="3">Add Item</button>
-							</p>
-						</div>
-					</div>
-				</div>
-
-				<div class="card" style="width: 300px;">
-					<div class="header cell-header card-section">
-						<h4>Hummus a Tune Burger</h4>
-						<p></p>
-						<div class="card-divider flex-container footer">
-							<p class="align-left">Price: $$
-								<button type="button" class="button align-right" data-item-id="4">Add Item</button>
-							</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<!-- Salads Menu -->
-		<div class="tabs-panel" data-menu-items="salads" id="menuSalads">
-			<div class="flex-container ">
-
-				<div class="card" style="width: 300px;">
-					<div class="header cell-header card-section">
-						<h4>Peas and Thank You Salad</h4>
-						<p></p>
-						<div class="card-divider flex-container footer">
-							<p class="align-left">Price: $$
-								<button type="button" class="button align-right" data-item-id="1">Add Item</button>
-							</p>
-						</div>
-					</div>
-				</div>
-
-				<div class="card" style="width: 300px;">
-					<div class="header cell-header card-section">
-						<h4>Sweet Home Avocado Salad</h4>
-						<p></p>
-						<div class="card-divider flex-container footer">
-							<p class="align-left">Price: $$
-								<button type="button" class="button align-right" data-item-id="2">Add Item</button>
-							</p>
-						</div>
-					</div>
-				</div>
-
-				<div class="card" style="width: 300px;">
-					<div class="header cell-header card-section">
-						<h4>The Garden of Eden Salad</h4>
-						<p></p>
-						<div class="card-divider flex-container footer">
-							<p class="align-left">Price: $$
-								<button type="button" class="button align-right" data-item-id="3">Add Item</button>
-							</p>
-						</div>
-					</div>
-				</div>
-
-				<div class="card" style="width: 300px;">
-					<div class="header cell-header card-section">
-						<h4>Hummus a Tune Burger</h4>
-						<p></p>
-						<div class="card-divider flex-container footer">
-							<p class="align-left">Price: $$
-								<button type="button" class="button align-right" data-item-id="4">Add Item</button>
-							</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<!-- Ice Cream Menu -->
-		<div class="tabs-panel" data-menu-items="icecream" id="menuSoftServe">
-			<div class="flex-container ">
-
-				<div class="card" style="width: 300px;">
-					<div class="header cell-header card-section">
-						<h4>Strawberry</h4>
-						<p></p>
-						<div class="card-divider flex-container footer">
-							<p class="align-left">Price: $$
-								<button type="button" class="button align-right" data-item-id="1">Add Item</button>
-							</p>
-						</div>
-					</div>
-				</div>
-
-				<div class="card" style="width: 300px;">
-					<div class="header cell-header card-section">
-						<h4>Pistachio</h4>
-						<p></p>
-						<div class="card-divider flex-container footer">
-							<p class="align-left">Price: $$
-								<button type="button" class="button align-right" data-item-id="2">Add Item</button>
-							</p>
-						</div>
-					</div>
-				</div>
-
-				<div class="card" style="width: 300px;">
-					<div class="header cell-header card-section">
-						<h4>Chocolate</h4>
-						<p></p>
-						<div class="card-divider flex-container footer">
-							<p class="align-left">Price: $$
-								<button type="button" class="button align-right" data-item-id="3">Add Item</button>
-							</p>
-						</div>
-					</div>
-				</div>
-
-				<div class="card" style="width: 300px;">
-					<div class="header cell-header card-section">
-						<h4>Vanilla</h4>
-						<p></p>
-						<div class="card-divider flex-container footer">
-							<p class="align-left">Price: $$
-								<button type="button" class="button align-right" data-item-id="4">Add Item</button>
-							</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<!-- Drinks Menu -->
-		<div class="tabs-panel" data-menu_items="drinks" id="menuDrinks">
-			<div class="flex-container ">
-
-				<div class="card" style="width: 300px;">
-					<div class="header cell-header card-section">
-						<h4>Coca-Cola</h4>
-						<p></p>
-						<div class="card-divider flex-container footer">
-							<p class="align-left">Price: $$
-								<button type="button" class="button align-right" data-item-id="1">Add Item</button>
-							</p>
-						</div>
-					</div>
-				</div>
-
-				<div class="card" style="width: 300px;">
-					<div class="header cell-header card-section">
-						<h4>Milkshake</h4>
-						<p></p>
-						<div class="card-divider flex-container footer">
-							<p class="align-left">Price: $$
-								<button type="button" class="button align-right" data-item-id="2">Add Item</button>
-							</p>
-						</div>
-					</div>
-				</div>
-
-				<div class="card" style="width: 300px;">
-					<div class="header cell-header card-section">
-						<h4>Water</h4>
-						<p></p>
-						<div class="card-divider flex-container footer">
-							<p class="align-left">Price: $$
-								<button type="button" class="button align-right" data-item-id="3">Add Item</button>
-							</p>
-						</div>
-					</div>
-				</div>
-
-				<div class="card" style="width: 300px;">
-					<div class="header cell-header card-section">
-						<h4>Orange Soda</h4>
-						<p></p>
-						<div class="card-divider flex-container footer">
-							<p class="align-left">Price: $$
-								<button type="button" class="button align-right" data-item-id="4">Add Item</button>
-							</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
 	</div>
 
 	<!-- Login Modal -->
