--- a/public/admin.html
+++ b/public/admin.html
@@ -66,45 +66,40 @@
 				<a href="#menuDrinks" role="tab">Drinks</a>
 			</li>
 		</ul>
-		<button type="button" class="button" id="addItemModal" data-open="addItemModal">Add Item</button>
+		<button type="button" class="button" id="addItem-modal" data-open="addItemModal">Add Item</button>
 	</div>
 
 	<div class="tabs-content" data-tabs-content="menu-tabs">
-	<div class="menuRender">
-	
-	</div>
-		<!-- Sandwich Menu -->
+		<div class="menuRender">
+
+		</div>
+		<!-- Appetizers Menu -->
 		<div class="tabs-panel is-active" data-menu-items="sandwiches" id="menuSandwiches">
 			<div class="flex-container " id="sandwichItem">
-		  <!-- Sandwich Items Added Jquery-->
 			</div>
 		</div>
 
 		<!-- Burgers Menu -->
 		<div class="tabs-panel" data-menu-items="burgers" id="menuBurgers">
 			<div class="flex-container ">
-  		<!-- Burgers Items Added Jquery-->
 			</div>
 		</div>
 
 		<!-- Salads Menu -->
 		<div class="tabs-panel" data-menu-items="salads" id="menuSalads">
 			<div class="flex-container ">
-    	<!-- Salads Items Added Jquery-->
 			</div>
 		</div>
 
 		<!-- Ice Cream Menu -->
 		<div class="tabs-panel" data-menu-items="icecream" id="menuSoftServe">
 			<div class="flex-container ">
-  		<!-- Ice Cream Items Added Jquery-->
 			</div>
 		</div>
 
 		<!-- Drinks Menu -->
 		<div class="tabs-panel" data-menu_items="drinks" id="menuDrinks">
 			<div class="flex-container ">
-  		<!-- Drink Items Added Jquery-->
 			</div>
 		</div>
 	</div>
@@ -141,35 +136,36 @@
 
 	<!-- Add Item Modal -->
 	<div class="reveal" id="addItemModal" data-reveal>
-		<form id="addMenuItemModal">
+		<form class="addItemModal">
 			<label>
 				<h2>Item name:</h2>
 				<input type="text" required id="add-item-menu">
 			</label>
-			<label>Category:
-				<input type="text" required id="add-item-ctgy">
+			<label>Category
+				<select id="add-item-ctgy">
+					<option value="Sandwich">Sandwich</option>
+					<option value="Burgers">Burgers</option>
+					<option value="Salads">Salads</option>
+					<option value="Drinks">Drinks</option>
+				</select>
 			</label>
 			<label>Description:
 				<input type="text" required id="add-item-desc">
 			</label>
 			<label>Item cost:
-				<input type="text" required id="add-item-cost" pattern="/[0-9]{2}\.[0-9]{2}/">
+				<input type="text" required id="add-item-cost">
+				<!-- <input type="text" required id="add-item-cost" pattern="/[0-9]{2}\.[0-9]{2}/gm"> -->
 			</label>
 			<div class="row flex-container">
 				<div class="input-group-button">
-					<button type="button" class="button large success" id="saveNewItem">Save</button>
+					<button type="submit" class="button large success" id="saveNewItem">Save</button>
 				</div>
-				<!-- <div class="input-group-button">
-					<button type="button" class="button large alert" id="deleteItem">Delete</button>
-				</div> -->
 			</div>
 		</form>
 		<button class="close-button" data-close aria-label="Close modal" type="button">
 			<span aria-hidden="true">&times;</span>
 		</button>
 	</div>
-
-
 
 
 	<script>
